add_executable(00 00.noft.c)
add_executable(01 01.err_returns.c)
add_executable(02 02.err_handler.c)
add_executable(03 03.undisturbed.c)
add_executable(04 04.if_error.c)
add_executable(05 05.err_coll.c)
add_executable(06 06.err_comm_dup.c)
add_executable(07 07.err_comm_grid2d.c)
add_executable(08 08.err_any_src.c)
add_executable(08.2 08.2.err_iany_src.c)
add_executable(09 09.err_insulation.c)
add_executable(09b 09b.err_insulation.c)
add_executable(10 10.respawn.c)
add_executable(11 11.respawn_reorder.c)
add_executable(12 12.buddycr.c)
add_executable(13 13.transactions.c)
add_executable(q01 q01.err_returns.c)
add_executable(q02 q02.err_handler.c)
add_executable(q04 q04.if_error.c)
add_executable(q06 q06.err_comm_dup.c)
add_executable(q07 q07.err_comm_grid2d.c)
add_executable(q08 q08.err_any_src.c)

linkMPI(00)
linkMPI(01)
linkMPI(02)
linkMPI(03)
linkMPI(04)
linkMPI(05)
linkMPI(06)
linkMPI(07)
linkMPI(08)
linkMPI(08.2)
linkMPI(09)
linkMPI(09b)
linkMPI(10)
linkMPI(11)
linkMPI(12)
linkMPI(13)
linkMPI(q01)
linkMPI(q02)
linkMPI(q04)
linkMPI(q06)
linkMPI(q07)
linkMPI(q08)